# wasm-image

./: .gitignore  Cargo.toml  DEVELOPMENT.md  QUICKSTART.md  README.md  package.json
benchmark/: benchmark.js
examples/: demo.html  index.js
js/: ImageProcessor.js
src/: effects.rs  filters.rs  lib.rs  transforms.rs  utils.rs
types/: ImageProcessor.d.ts
