[package]
name = "wasm-image"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Image processing and math
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
rayon-core = "1.12"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization, slower compile

[dev-dependencies]
wasm-bindgen-test = "1"
